// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`func asm coverage simple if 1`] = `
"Coverage Summary:
Lines: 11/14 (78.57%)
Total Gas: 379
Total Hits: 12

Instruction Stats:
  DICTIGETJMPZ   | 126 gas | 1 hits |   126 avg gas |  33.25%
  SETGLOB        |  61 gas | 3 hits | 20.33 avg gas |  16.09%
  DICTPUSHCONST  |  34 gas | 1 hits |    34 avg gas |   8.97%
  SETCP          |  26 gas | 1 hits |    26 avg gas |   6.86%
  GETGLOB        |  26 gas | 1 hits |    26 avg gas |   6.86%
  GTINT          |  26 gas | 1 hits |    26 avg gas |   6.86%
  PUSHINT_8      |  26 gas | 1 hits |    26 avg gas |   6.86%
  PUSHINT_4      |  18 gas | 1 hits |    18 avg gas |   4.75%
  PUSHCONT_SHORT |  18 gas | 1 hits |    18 avg gas |   4.75%
  IFJMP          |  18 gas | 1 hits |    18 avg gas |   4.75%

Annotated Code:
 1 ✓ | SETCP 0                                  | gas:26    | hits:1
 2 ✓ | DICTPUSHCONST 19 [                       | gas:34    | hits:1
 3   |     0 => {                               |           |
 4 ✓ |         PUSHINT_4 10                     | gas:18    | hits:1
 5 ✓ |         SETGLOB 1                        | gas:28    | hits:1
 6 ✓ |         GETGLOB 1                        | gas:26    | hits:1
 7 ✓ |         GTINT 10                         | gas:26    | hits:1
 8 ✓ |         PUSHCONT_SHORT {                 | gas:18    | hits:1
 9 ✗ |             PUSHINT_8 20                 |           |
10 ✗ |             SETGLOB 1                    |           |
11   |         }                                |           |
12 ✓ |         IFJMP                            | gas:18    | hits:1
13 ✓ |         PUSHINT_8 15                     | gas:26    | hits:1
14 ✓ |         SETGLOB 1                        | gas:33    | hits:2
15   |     }                                    |           |
16   | ]                                        |           |
17 ✓ | DICTIGETJMPZ                             | gas:126   | hits:1
18 ✗ | THROWARG 11                              |           |
19   |                                          |           |"
`;

exports[`func asm coverage simple if 2 1`] = `
"Coverage Summary:
Lines: 11/14 (78.57%)
Total Gas: 387
Total Hits: 12

Instruction Stats:
  DICTIGETJMPZ   | 126 gas | 1 hits |   126 avg gas |  32.56%
  SETGLOB        |  61 gas | 3 hits | 20.33 avg gas |  15.76%
  PUSHINT_8      |  52 gas | 2 hits |    26 avg gas |  13.44%
  DICTPUSHCONST  |  34 gas | 1 hits |    34 avg gas |   8.79%
  SETCP          |  26 gas | 1 hits |    26 avg gas |   6.72%
  GETGLOB        |  26 gas | 1 hits |    26 avg gas |   6.72%
  GTINT          |  26 gas | 1 hits |    26 avg gas |   6.72%
  PUSHCONT_SHORT |  18 gas | 1 hits |    18 avg gas |   4.65%
  IFJMP          |  18 gas | 1 hits |    18 avg gas |   4.65%

Annotated Code:
 1 ✓ | SETCP 0                                  | gas:26    | hits:1
 2 ✓ | DICTPUSHCONST 19 [                       | gas:34    | hits:1
 3   |     0 => {                               |           |
 4 ✓ |         PUSHINT_8 15                     | gas:26    | hits:1
 5 ✓ |         SETGLOB 1                        | gas:28    | hits:1
 6 ✓ |         GETGLOB 1                        | gas:26    | hits:1
 7 ✓ |         GTINT 10                         | gas:26    | hits:1
 8 ✓ |         PUSHCONT_SHORT {                 | gas:18    | hits:1
 9 ✓ |             PUSHINT_8 20                 | gas:26    | hits:1
10 ✓ |             SETGLOB 1                    | gas:33    | hits:2
11   |         }                                |           |
12 ✓ |         IFJMP                            | gas:18    | hits:1
13 ✗ |         PUSHINT_8 15                     |           |
14 ✗ |         SETGLOB 1                        |           |
15   |     }                                    |           |
16   | ]                                        |           |
17 ✓ | DICTIGETJMPZ                             | gas:126   | hits:1
18 ✗ | THROWARG 11                              |           |
19   |                                          |           |"
`;
